--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My First git website </title>
-    <link rel="stylesheet" href="../Css/style.css">
+    <link rel="stylesheet" href="../My-first-git-website/Css/style.css">
 </head>
 <body>
     <div>
